[tool.poetry]
name = "orgchart-crawler"
version = "0.1.0"
description = ""
authors = ["Lilith Wittmann <mail@lilithwittmann.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
boto3 = "^1.20.26"
sentry-sdk = "^1.5.1"
pdfplumber = "^0.6.0"
gql = {extras = ["all"], version = "^3.0.0rc0", allow-prereleases = true}


[tool.poetry.dev-dependencies]
uvicorn = {extras = ["standard"], version = "^0.16.0"}
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
